SearchView is not working properly..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PackageViewer</string>
     <string name="_dot">---</string>
+    <string name="search_app">Search App</string>
 </resources>
